--- a/week9/css/all.css
+++ b/week9/css/all.css
@@ -157,6 +157,13 @@ body {
   font-weight: bold;
 }
 
+input,
+button {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
 .wrap {
   max-width: 1110px;
   margin: 0 auto;
